--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,8 @@ AddDefaultCharset UTF-8
 
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^(.*)$ $1.php
 
 Options All -Indexes
 
