--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
 RewriteRule ^(.*)$ $1.php
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*) index.php?=$1 [QSA,L]
+
 Options All -Indexes
 
 # Dodaje przekierowanie z HTTP do HTTPS
