Fixed Main Page

--- a/admin/conf.ini
+++ b/admin/conf.ini
@@ -2,17 +2,17 @@ lang = en,ru
 
 password = e7bb45d93eec92166a1b19ffb62430dc80cfb27d
 
-session = 814ce7e25b7c6650a4596a76933817f3937aa3f3
+session = b2c2cf6d3cc667613ebf2a81a0a74248e9598169
 
 pass_complexity = 500000
 
-pass_complexity_js = 14998
+pass_complexity_js = 14996
 
-auth_time = 1648293076
+auth_time = 1649531024
 
-auth_error_time = 
+auth_error_time = 1649531019
 
-auth_error_list = 
+auth_error_list = a%3A0%3A%7B%7D
 
 auth_error_limit = 5
 
@@ -50,5 +50,5 @@ update_final = 1
 
 update_beta = 0
 
-cache = a%3A7%3A%7Bs%3A1%3A%22%2F%22%3Bi%3A516335%3Bs%3A7%3A%22%2Fadmin%2F%22%3Bi%3A124967%3Bs%3A8%3A%22%2Fengine%2F%22%3Bi%3A814%3Bs%3A10%3A%22%2Ftemplate%2F%22%3Bi%3A389750%3Bs%3A14%3A%22%2Ftemplate%2Fcss%2F%22%3Bi%3A1891%3Bs%3A14%3A%22%2Ftemplate%2Fimg%2F%22%3Bi%3A59707%3Bs%3A13%3A%22%2Ftemplate%2Fjs%2F%22%3Bi%3A320005%3B%7D
+cache = 
 
