--- a/admin/conf.ini
+++ b/admin/conf.ini
@@ -2,15 +2,15 @@ lang = en,ru
 
 password = e7bb45d93eec92166a1b19ffb62430dc80cfb27d
 
-session = b2c2cf6d3cc667613ebf2a81a0a74248e9598169
+session = 16e88a6fc5b5f15e6ee6e83fa8f891bb6e91bdbd
 
 pass_complexity = 500000
 
-pass_complexity_js = 14996
+pass_complexity_js = 14991
 
-auth_time = 1649531024
+auth_time = 1650444437
 
-auth_error_time = 1649531019
+auth_error_time = 1650313288
 
 auth_error_list = a%3A0%3A%7B%7D
 
@@ -50,5 +50,5 @@ update_final = 1
 
 update_beta = 0
 
-cache = 
+cache = a%3A13%3A%7Bs%3A1%3A%22%2F%22%3Bi%3A1195762%3Bs%3A10%3A%22%2Ftemplate%2F%22%3Bi%3A1041974%3Bs%3A13%3A%22%2Ftemplate%2Fjs%2F%22%3Bi%3A365562%3Bs%3A14%3A%22%2Ftemplate%2Fimg%2F%22%3Bi%3A97306%3Bs%3A14%3A%22%2Ftemplate%2Fcss%2F%22%3Bi%3A2193%3Bs%3A15%3A%22%2Ftemplate%2Ffunc%2F%22%3Bi%3A353762%3Bs%3A19%3A%22%2Ftemplate%2Ffunc%2Fsrc%2F%22%3Bi%3A352639%3Bs%3A7%3A%22%2Fadmin%2F%22%3Bi%3A125147%3Bs%3A11%3A%22%2Ffunctions%2F%22%3Bi%3A26060%3Bs%3A21%3A%22%2Ffunctions%2Fprocesses%2F%22%3Bi%3A10992%3Bs%3A16%3A%22%2Ffunctions%2Fuser%2F%22%3Bi%3A10413%3Bs%3A19%3A%22%2Ffunctions%2Fcabinet%2F%22%3Bi%3A4655%3Bs%3A8%3A%22%2Fengine%2F%22%3Bi%3A1449%3B%7D
 
